# shadersBasics

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  buildandrun.bat  buildandrundbg.bat
assets/shaders/: helloTriangle.frag  helloTriangle.vert  random.frag  raytracing.frag  raytracing.vert  shader.frag  shader.vert
scripts/: build-clang-dbg.bat  build-clang-rel.bat  build-msvc-dbg.bat  build-msvc-rel.bat  config-clang-dbg.bat  config-clang-rel.bat  config-msvc-dbg.bat  config-msvc-rel.bat  run-clang-dbg.bat  run-clang-rel.bat  run-clang.bat  run-msvc-dbg.bat  run-msvc-rel.bat
src/: CMakeLists.txt  main.cpp
src/core/: core.h  input.cpp  input.h  keyCodes.h  mouseButtonCodes.h  window.h
src/engine/: camera.cpp  camera.h  engine.cpp  engine.h  initializers.cpp  initializers.h  shader.cpp  shader.h  types.cpp  types.h
src/ui/: imGuiOverlay.cpp  imGuiOverlay.h
src/utils/: utils.cpp  utils.h
